--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="toast_mobile_data">Currently using mobile data.  Enable \"Use Cellular Data\" in order to start ZeroTier.</string>
     <string name="menu_peers">Peers</string>
     <string name="menu_orbit">Orbit</string>
+    <string name="menu_logs">Logs</string>
     <string name="enabled">Enabled</string>
     <string name="disabled">Disabled</string>
     <string name="moon_world_id">Moon World ID:</string>
@@ -153,4 +154,11 @@
     <string name="dialog_no_notification_alert_title">Notification Permission Not Granted</string>
     <string name="open_notification_settings">Goto notification settings</string>
     <string name="dont_show_again">Don\'t show again</string>
+    <string name="logs_activity_title">Application Logs</string>
+    <string name="logs_empty">No logs available</string>
+    <string name="logs_copy">Copy logs</string>
+    <string name="logs_clear">Clear logs</string>
+    <string name="logs_share">Share logs</string>
+    <string name="logs_copied">Logs copied to clipboard</string>
+    <string name="logs_cleared">Logs cleared</string>
 </resources>
