--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -163,4 +163,13 @@
     <string name="menu_refresh">刷新</string>
     <string name="menu_clear">清空</string>
     <string name="no_logs_found">未找到日志</string>
+    <!-- 代理设置相关字符串 -->
+    <string name="proxy_settings">代理设置</string>
+    <string name="proxy_enable">启用代理</string>
+    <string name="proxy_enable_summary">全局路由时使用代理服务器</string>
+    <string name="proxy_type">代理类型</string>
+    <string name="proxy_host">代理主机</string>
+    <string name="proxy_port">代理端口</string>
+    <string name="proxy_username">用户名</string>
+    <string name="proxy_password">密码</string>
 </resources>
