Remove proxy functionality and related components
- Deleted Socks5ProxyClient.java as the SOCKS5 proxy client implementation is no longer needed.
- Removed ProxyHandler and ProxyManager classes along with their associated methods and configurations.
- Updated TunTapAdapter to eliminate proxy handling logic.
- Adjusted ZeroTierOneService to remove proxy configuration checks and related routing logic.
- Cleaned up constants and resource files to reflect the removal of proxy settings and options.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,7 +166,8 @@
     <string name="menu_clear">Clear</string>
     <string name="no_logs_found">No logs found</string>
 
-    <!-- 代理设置相关字符串 -->
+    <!-- 代理设置相关字符串 (功能已移除) -->
+    <!--
     <string name="proxy_settings">Proxy Settings</string>
     <string name="proxy_enable">Enable Proxy</string>
     <string name="proxy_enable_summary">Use proxy server when global routing is enabled</string>
@@ -175,4 +176,5 @@
     <string name="proxy_port">Proxy Port</string>
     <string name="proxy_username">Username</string>
     <string name="proxy_password">Password</string>
+    -->
 </resources>
